fixing overflow 3

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,21 +1,8 @@
 @import './styles/color-palette.scss';
 
-*,
-*:before,
-*:after {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-}
-
-html {
-  margin: 0;
-  padding: 0;
-  width: 100%;
-  height: 100%;
-}
-
 .App {
+  display: flex;
+  flex-direction: column;
   width: 100%;
   height: 100%;
   color: $primary-text-color;
