--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -1,5 +1,18 @@
 @import './styles/typography.scss';
 
+*,
+*:before,
+*:after {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+html {
+  margin: 0;
+  padding: 0;
+}
+
 body {
   margin: 0;
   font-family: $primary-font;
